feat(donation): Implement async operations & fix config conflict